backend.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: ems

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: 931753623746.dkr.ecr.ap-south-1.amazonaws.com/ems-backend:latest

        ports:
        - containerPort: 8000
