frontend.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: ems

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: 931753623746.dkr.ecr.ap-south-1.amazonaws.com/ems-frontend:latest

        ports:
        - containerPort: 80
